examples(drill-downs): fix nav z-index on desktop

--- a/examples/drill-downs/dashboard-app/public/style.css
+++ b/examples/drill-downs/dashboard-app/public/style.css
@@ -463,6 +463,7 @@ ul {
         position: relative;
         margin: 0;
         overflow-y: initial;
+        z-index: auto;
 
     }
 
